  19 Mar 2017; Manuel Friedli <manuel@fritteli.ch> gitlab-ce-9.0.0_rc4.ebuild,
  gitlab-ce-9999.ebuild:
  www-apps/gitlab-ce:  Updated ebuild for gitlab-ce-9999 and also cleaned
  dependencies for gitlab-9.0.0_rc4

*gitlab-ce-9.0.0_rc4 (19 Mar 2017)

  19 Mar 2017; Manuel Friedli <manuel@fritteli.ch>
  +files/02-gitlab-ce-9.0.0-fix-redis-config-path.patch,
  +files/05-gitlab-ce-9.0.0-replace-sys-filesystem.patch,
  +gitlab-ce-9.0.0_rc4.ebuild, -gitlab-ce-8.17.0_rc3.ebuild:
  www-apps/gitlab-ce:   Added ebuild for Gitlab CE 9.0.0 RC4

*gitlab-ce-8.17.3 (13 Mar 2017)

  13 Mar 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.17.3.ebuild,
  gitlab-ce-9999.ebuild, metadata.xml:
  www-apps/gitlab-ce:   added ebuild for gitlab-ce-8.17.3, which is the initial
  ebuild to contain a USE flag for gitlab-pages

*gitlab-ce-8.17.2 (07 Mar 2017)

  07 Mar 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.17.2.ebuild:
  www-apps/gitlab-ce:   Added ebuild for gitlab-ce-8.17.2. This version does not
  include support for gitlab-pages yet, as the ebuild for that is only just
  about to be introduced to the overlay.

  26 Feb 2017; Manuel Friedli <manuel@fritteli.ch> gitlab-ce-8.17.0.ebuild,
  gitlab-ce-9999.ebuild:
  www-apps/gitlab-ce:  Updated ebuild for the GIT version (-9999) and fixed the
  dependency to nodejs in the 8.17.0 version.

  26 Feb 2017; Manuel Friedli <manuel@fritteli.ch>
  +files/06-gitlab-ce-8.17-fix-webpack-config.patch, gitlab-ce-8.17.0.ebuild:
  www-apps/gitlab-ce:  added patch for the webpack config, hopefully fixing the
  emerge --config phase

*gitlab-ce-8.17.0 (24 Feb 2017)

  24 Feb 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.17.0.ebuild:
  www-apps/gitlab-ce:  added ebuild for gitlab-ce-8.17.0. This is the first
  version to depend on npm

*gitlab-ce-8.16.6 (24 Feb 2017)

  24 Feb 2017; Manuel Friedli <manuel@fritteli.ch>
  +gitlab-ce-8.16.6.ebuild:
  www-apps/gitlab-ce: Added ebuild for gitlab-ce-8.16.6
